--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@radix-ui/react-toggle": "^1.1.9",
     "@radix-ui/react-toggle-group": "^1.1.10",
     "@radix-ui/react-tooltip": "^1.2.7",
+    "@socket.io/redis-adapter": "^8.3.0",
     "@supabase/supabase-js": "^2.78.0",
     "@tanstack/react-query": "^5.83.0",
     "class-variance-authority": "^0.7.1",
@@ -51,8 +52,6 @@
     "cmdk": "^1.1.1",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.6.0",
-    "firebase": "^12.5.0",
-    "firebase-admin": "^13.6.0",
     "framer-motion": "^12.23.24",
     "input-otp": "^1.4.2",
     "jsonwebtoken": "^9.0.2",
@@ -80,6 +79,7 @@
     "@eslint/js": "^9.32.0",
     "@tailwindcss/typography": "^0.5.16",
     "@types/express": "^4.17.25",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^22.19.1",
     "@types/react": "^18.3.23",
     "@types/react-dom": "^18.3.7",
